// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`link > prominence > render prominence default 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="default"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > prominence > render prominence strong 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="strong"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > prominence > render prominence stronger 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="stronger"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > prominence > render prominence weak 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      prominence="weak"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly prop primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with bad sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #3f4250;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #222638;
  text-decoration-color: #222638;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #3f4250;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with href props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with href props 2`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .emotion-3,
.emotion-0 .emotion-7,
.emotion-0 .emotion-13 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .emotion-3,
.emotion-0:focus .emotion-3,
.emotion-0:hover .emotion-7,
.emotion-0:focus .emotion-7,
.emotion-0:hover .emotion-13,
.emotion-0:focus .emotion-13 {
  -webkit-transform: translate(0.125rem, 0);
  -moz-transform: translate(0.125rem, 0);
  -ms-transform: translate(0.125rem, 0);
  transform: translate(0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-2 {
  margin-right: 0.25rem;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .emotion-3,
.emotion-4 .emotion-7,
.emotion-4 .emotion-13 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-4:hover .emotion-3,
.emotion-4:focus .emotion-3,
.emotion-4:hover .emotion-7,
.emotion-4:focus .emotion-7,
.emotion-4:hover .emotion-13,
.emotion-4:focus .emotion-13 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-4:hover:visited,
.emotion-4:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #005da3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

.emotion-6 {
  margin-left: 0.25rem;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 0.25rem;
}

.emotion-12 {
  margin-left: 0.25rem;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      <svg
        class="emotion-2 emotion-3 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
          fill-rule="evenodd"
        />
      </svg>
      Hello
    </a>
    <a
      class="emotion-4 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
      <svg
        class="emotion-6 emotion-7 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
          fill-rule="evenodd"
        />
      </svg>
    </a>
    <a
      class="emotion-4 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-10 emotion-11"
      >
        <svg
          class="emotion-12 emotion-13 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
          />
          <path
            d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </span>
    </a>
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-10 emotion-11"
      >
        <svg
          class="emotion-12 emotion-13 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
          />
          <path
            d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with no sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with oneLine 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <div
      style="margin-bottom: 16px; margin-top: 8px; width: 200px;"
    >
      <a
        class="emotion-0 emotion-1"
        data-variant="standalone"
        href="/"
        variant="bodyStrong"
      >
        Hello this is a very long text that should be truncated
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with sizes 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-2 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-2 .e1afnb7a3,
.emotion-2 .e1afnb7a2,
.emotion-2 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-2>* {
  pointer-events: none;
}

.emotion-2:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-2:hover,
.emotion-2:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-2:hover .e1afnb7a3,
.emotion-2:focus .e1afnb7a3,
.emotion-2:hover .e1afnb7a2,
.emotion-2:focus .e1afnb7a2,
.emotion-2:hover .e1afnb7a4,
.emotion-2:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-2:hover:visited,
.emotion-2:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-2[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-2:hover::after,
.emotion-2:focus::after {
  background-color: #005da3;
}

.emotion-2:active {
  text-decoration-thickness: 2px;
}

.emotion-4 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-4 .e1afnb7a3,
.emotion-4 .e1afnb7a2,
.emotion-4 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-4>* {
  pointer-events: none;
}

.emotion-4:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-4:hover,
.emotion-4:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-4:hover .e1afnb7a3,
.emotion-4:focus .e1afnb7a3,
.emotion-4:hover .e1afnb7a2,
.emotion-4:focus .e1afnb7a2,
.emotion-4:hover .e1afnb7a4,
.emotion-4:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-4:hover:visited,
.emotion-4:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-4[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-4:hover::after,
.emotion-4:focus::after {
  background-color: #005da3;
}

.emotion-4:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
    ,
    <a
      class="emotion-2 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodySmallStrong"
    >
      Hello
    </a>
    ,
    <a
      class="emotion-4 emotion-1"
      data-variant="standalone"
      href="/"
      variant="captionStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with target blank 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .emotion-5 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .emotion-5,
.emotion-0:focus .emotion-5 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-bottom: 0.25rem;
}

.emotion-4 {
  margin-left: 0.25rem;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      rel="noopener noreferrer"
      target="_blank"
      variant="bodyStrong"
    >
      Hello
      <span
        class="emotion-2 emotion-3"
      >
        <svg
          class="emotion-4 emotion-5 styles__vbm0wq0 styles_prominence_default__vbm0wqg styles_disabled_false__vbm0wqf styles_size_small__vbm0wqa"
          viewBox="0 0 16 16"
        >
          <path
            d="M6.22 8.72a.75.75 0 0 0 1.06 1.06l5.22-5.22v1.69a.75.75 0 0 0 1.5 0v-3.5a.75.75 0 0 0-.75-.75h-3.5a.75.75 0 0 0 0 1.5h1.69z"
          />
          <path
            d="M3.5 6.75c0-.69.56-1.25 1.25-1.25H7A.75.75 0 0 0 7 4H4.75A2.75 2.75 0 0 0 2 6.75v4.5A2.75 2.75 0 0 0 4.75 14h4.5A2.75 2.75 0 0 0 12 11.25V9a.75.75 0 0 0-1.5 0v2.25c0 .69-.56 1.25-1.25 1.25h-4.5c-.69 0-1.25-.56-1.25-1.25z"
          />
        </svg>
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > render correctly with variants props 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="inline"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > sentiment > render info 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;

exports[`link > sentiment > render primary 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #641cb3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #521094;
  text-decoration-color: #521094;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #641cb3;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #641cb3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="/"
      variant="bodyStrong"
    >
      Hello
    </a>
  </div>
</DocumentFragment>
`;
